prod path change

--- a/SRTechnologies/src/app/layout/service/service.component.html
+++ b/SRTechnologies/src/app/layout/service/service.component.html
@@ -7,7 +7,7 @@
                 <h2>Mobile App Development</h2>
                 <div class="content-container">
                     <!-- Image -->
-                    <img class="service-image" src="./../../../assets/mobile.jpeg" alt="Our Services">
+                    <img class="service-image" src="assets/mobile.jpeg" alt="Our Services">
                     <!-- Content -->
                     <div class="service-description">
                         <p>We offer end-to-end mobile app development services, from concept to deployment, for both iOS
@@ -26,7 +26,7 @@
                             customer expectations.</p>
                     </div>
                      <!-- Image -->
-                     <img class="service-image" src="./../../../assets/webdev.jpeg" alt="Our Services">
+                     <img class="service-image" src="assets/webdev.jpeg" alt="Our Services">
                   </div>
                 </div>
 
@@ -35,7 +35,7 @@
                 <h2>UX/UI and Graphics Design</h2>
                 <div class="content-container">
                     <!-- Image -->
-                    <img class="service-image" src="./../../../assets/ui.jpeg" alt="Our Services">
+                    <img class="service-image" src="assets/ui.jpeg" alt="Our Services">
 
                     <!-- Content -->
                     <div class="service-description">
