--- a/SRTechnologies/src/app/layout/header/header.component.html
+++ b/SRTechnologies/src/app/layout/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="navbar navbar-expand-md navbar-dark bg-tr">
-    <div class="logo-txt col-6 m-2"><img class="logo mr-2" src="./../../../assets/logo.png" alt="SR Technologies Logo"> <span class="p-2">SR Technologies </span></div>
+    <div class="logo-txt col-6 m-2"><img class="logo mr-2" src="assets/logo.png" alt="SR Technologies Logo"> <span class="p-2">SR Technologies </span></div>
     <button class="navbar-toggler m-2"  
             type="button" 
             data-toggle="collapse" 
