logo path updated

--- a/SRTechnologies/src/app/layout/side-nav/side-nav.component.html
+++ b/SRTechnologies/src/app/layout/side-nav/side-nav.component.html
@@ -4,7 +4,7 @@
       <mat-icon>menu</mat-icon>
     </div>
  </div>
- <div class="logo-txt col-md-6 m-2"><img class="logo mr-2" src="./../../../assets/logo.png"> <span class="p-2">SR Technologies </span></div>
+ <div class="logo-txt col-md-6 m-2"><img class="logo mr-2" src="assets/logo.png"> <span class="p-2">SR Technologies </span></div>
  
   <div class="collapse navbar-collapse" id="navbarCollapse">
     <ul class="navbar-nav mr-auto">
